--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "LuckyShop前端代码",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server",
+    "dist": "webpack"
   },
   "repository": {
     "type": "git",
