--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "luckyshop",
+  "name": "LuckyShop",
   "version": "1.0.0",
-  "description": "LuckyShop前端代码",
+  "description": "前端代码",
   "main": "index.js",
   "scripts": {
     "dev": "node_modules/.bin/webpack-dev-server",
@@ -9,34 +9,28 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/luckyCbaby/LuckyShop.git"
+    "url": "git@gitee.com:happy_mmall1/XShop-fe.git"
   },
-  "author": "shijie",
+  "author": "DCW",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/luckyCbaby/LuckyShop/issues"
-  },
-  "homepage": "https://github.com/luckyCbaby/LuckyShop#readme",
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^2.1.0",
-    "file-loader": "^3.0.1",
+    "css-loader": "^0.28.9",
+    "extract-text-webpack-plugin": "^3.0.2",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "postcss-loader": "^3.0.0",
-    "style-loader": "^0.23.1",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.28.4",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "html-webpack-plugin": "^2.30.1",
+    "style-loader": "^0.20.1",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^1.15.0"
   },
   "dependencies": {
-    "font-awesome": "^4.7.0"
+    "file-loader": "^1.1.6",
+    "font-awesome": "^4.7.0",
+    "hogan": "^1.0.2"
   }
 }
