--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "前端代码",
   "main": "index.js",
   "scripts": {
-    "dev": "node_modules/.bin/webpack-dev-server",
-    "dist": "node_modules/.bin/webpack"
+    "dev": "webpack-dev-server",
+    "dist": "webpack"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,8 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
+    "hogan": "^1.0.2",
+    "hogan.js": "^3.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.20.1",
@@ -29,8 +31,6 @@
     "webpack-dev-server": "^1.15.0"
   },
   "dependencies": {
-    "file-loader": "^1.1.6",
-    "font-awesome": "^4.7.0",
-    "hogan": "^1.0.2"
+    "file-loader": "^1.1.6"
   }
 }
